# ProgrammingInHaskell2ndEd

./: README.md
Chapter4/app/: 1.hs  3.hs  5.hs  8.hs
Chapter5/app/: 10.hs  4.hs  7.hs  8.hs  9.hs
Chapter6/src/: Solutions.hs
Chapter7/: stack.yaml
Chapter7/app/: Main.hs
Chapter7/src/: Solutions.hs
Chapter8/src/: Solutions.hs
blog-generator/: about.md  blog_tailwind.css  flake.nix  site.cabal  site.hs  tailwind.config.js
blog-generator/css/: blog.css
blog-generator/posts/: 2019-12-21-Chapter-1-Notes.md  2019-12-21-Chapter-2-Notes.md  2019-12-21-Chapter-3-Exercises.md  2019-12-21-Chapter-3-Notes.md  2019-12-21-Chapter-4-Exercises.md  2019-12-21-Chapter-4-Notes.md  2019-12-21-Chapter-5-Exercises.md  2019-12-21-Chapter-5-Notes.md  2019-12-21-Chapter-6-Exercises.md  2019-12-21-Chapter-6-Notes.md  2020-02-28-Chapter-7-Notes.md  2020-03-01-Chapter-7-Exercises.md  2020-06-01-Chapter-8-Notes.md  2020-12-23-Chapter-8-Exercises.md  2022-01-29-Chapter-9-Notes.md
blog-generator/templates/: default.html  post-blurb.html  post.html  posts.html
chapter-exercises/: .gitignore  chapter-exercises.cabal  flake.nix
chapter-exercises/lib/: Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs
chapter_exercises/Chapter7/: package.yaml
docs/: 2019-12-21 Chapter 1 Notes.md  2019-12-21 Chapter 3 Exercises.md  2019-12-21 Chapter 3 Notes.md  2019-12-21 Chapter 4 Notes.md  2020-06-01 Chapter 8 Notes.md  about.html  archive.html  flake.nix  index.html
posts/: 2019-02-28-Chapter-7.md  2019-03-01-Chapter-7-Exercises.md  2019-06-01-Chapter-8.md
(+44 files in other folders)
