cabal-version:      2.4
name:               chapter-exercises
version:            0.1.0.0
author:             Connor Baker

common shared-properties
  default-language: Haskell2010
  build-depends:
    base ^>=4.14.3.0
  ghc-options:
    -Wall

library
    import: shared-properties
    exposed-modules: Chapter4, Chapter5, Chapter6, Chapter7, Chapter8
    hs-source-dirs:   lib
